<resources>
    <string name="app_name">Atms</string>
    <string name="logo">logo</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">email</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="title_activity_drawer">Statistics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="ignore">ignore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lastseen">2 Hours Ago</string>
    <string name="degree"> C</string>
    <string name="percentage"> %</string>
    <string name="devices_owned">Devices Owned</string>
    <string name="total_readings">Total Readings</string>
    <string name="readings_emitted_today">Readings Today</string>
    <string name="max_temp_today">Max. Temp. Today</string>
    <string name="max_hum_today">Max. Hum. Today</string>
    <string name="sensor_devices">Sensor Devices</string>
    <string name="active_devices">Active Devices</string>
    <string name="actuator_devices">Actuator Devices</string>
    <string name="profile">profile</string>
    <string name="chip" />
    <string name="change_image">change image</string>
    <string name="name">name</string>
    <string name="designation">email</string>
    <string name="expertiese">contact</string>
    <string name="private_information">Personal Information</string>
    <string name="room_no">address</string>
    <string name="save">Save</string>
    <string name="account_information">Account Information</string>
    <string name="info">info</string>
    <string name="profile_photo">Profile photo</string>
    <string name="live_data_stream">Live Data Stream</string>
    <string name="no_device_selected">no device selected</string>
    <string name="this_year">Yearly Average</string>
    <string name="data_history">Data History</string>
    <string name="constraints">Constraints</string>
    <string name="yearly_data">Yearly Data</string>
    <string name="no_data_to_display">No data to display</string>
    <string name="temperature">Temperature</string>
    <string name="Oxygen" >Oxygen</string>
    <string name="humidity">Humidity</string>
    <string name="loading">Please wait…</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>


    <string-array name="data_attributes">
        <item>Temperature</item>
        <item>Humidity</item>
        <item>Oxygen</item>
    </string-array>

</resources>




















