<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.atms.LoginActivity"
    android:orientation="vertical"
    android:background="#ffffff"
    android:paddingTop="40dp"
    android:id="@+id/root">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:id="@+id/lower_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:layout_marginTop="60dp">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="textEmailAddress|textAutoComplete"
                android:background="@drawable/et_bg"
                android:hint="@string/email"
                android:textSize="13sp"
                android:layout_marginBottom="25dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:drawableStart="@drawable/account"
                android:drawablePadding="10dp"
                />

            <EditText
                android:id="@+id/et_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/et_bg"
                android:textSize="13sp"
                android:hint="@string/password"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/btn_signin"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/sign_in_btn_transition"
                    android:text="@string/sign_in"
                    android:textColor="#fff"
                    android:onClick="attemptLogin"/>

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:indeterminate="true"
                    android:visibility="gone"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="6dp"
                    />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_fp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="#276bff"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>












