<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_gravity="center"
        android:layout_centerVertical="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:layout_marginBottom="4dp"/>

            <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:min_value="0"
                app:max_value="100"
                app:bar_color="#F7BB88"
                app:bar_highlight_color="#E07416"
                app:data_type="_integer"
                app:gap="1"
                android:id="@+id/range_seekbar"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/min_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:id="@+id/max_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:layout_marginBottom="4dp"/>

            <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:min_value="0"
                app:max_value="100"
                app:bar_color="#F7BB88"
                app:bar_highlight_color="#E07416"
                app:data_type="_integer"
                app:gap="1"
                android:id="@+id/hum_seekbar"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/min_hum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:id="@+id/max_hum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Oxygen"
                android:layout_marginBottom="4dp"/>

            <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:min_value="0"
                app:max_value="100"
                app:bar_color="#F7BB88"
                app:bar_highlight_color="#E07416"
                app:data_type="_integer"
                app:gap="1"
                android:id="@+id/oxy_seekbar"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/min_oxy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:id="@+id/max_oxy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <Button
                android:id="@+id/btn_dismiss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="#fff"
                android:layout_marginEnd="3dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:background="@drawable/dialogue_selector"/>

            <Button
                android:id="@+id/btn_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/apply"
                android:textColor="#fff"
                android:layout_marginStart="3dp"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:background="@drawable/dialogue_button"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>














