<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frame">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">




        <android.support.design.widget.CoordinatorLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilePic"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="26dp"
                android:clickable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/account"
                app:civ_border_width="0.1dp"
                android:layout_gravity="center_horizontal"/>


            <ImageButton
                android:id="@+id/selectPic"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/camera_btn_selector"
                app:layout_anchor="@id/profilePic"
                app:layout_anchorGravity="bottom|right"/>

        </android.support.design.widget.CoordinatorLayout>

        <!--<TextView-->
        <!--android:id="@+id/changeImage"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="24dp"-->
        <!--android:layout_marginRight="24dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:text="@string/change_image"-->
        <!--android:textColor="#658de1"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/profilePic"-->
        <!--android:layout_marginStart="24dp"-->
        <!--android:layout_marginEnd="24dp" />-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp">


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/profile_et_bg"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/rename_box"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/changeImage" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/profile_et_bg"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/email"
                android:ems="10"
                android:hint="@string/designation"
                android:inputType="textEmailAddress"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />


            <EditText
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/profile_et_bg"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/book_open_variant"
                android:ems="10"
                android:hint="@string/expertiese"
                android:inputType="phone"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/profile_et_bg"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/map_marker"
                android:ems="10"
                android:hint="@string/room_no"
                android:inputType="textPersonName"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="35dp"
        android:visibility="gone"
        android:id="@+id/profile_pro"/>

</FrameLayout>